--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,23 @@ services:
   web:
     image: nginx:latest
     ports:
-      - "80:80"
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./cache:/var/cache/nginx
+    networks:
+      - app-network
+
+  frontend:
+    image: nginx:latest
+    ports:
+      - "8081:80"
     volumes:
       - ./html:/usr/share/nginx/html
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./static-server/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
