--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       - "8080:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./cache:/var/cache/nginx
+      - ./nginx/cache:/var/cache/nginx
     networks:
       - app-network
 
@@ -15,7 +15,7 @@ services:
     ports:
       - "8081:80"
     volumes:
-      - ./html:/usr/share/nginx/html
+      - ./static-server/html:/usr/share/nginx/html
       - ./static-server/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - app-network
