Add: 쿠키를 통한 인증 기능 적용

--- a/auth-server/nginx.conf
+++ b/auth-server/nginx.conf
@@ -10,14 +10,15 @@ http {
     server_name localhost;
 
     location /validate {
+      # content_by_lua는 content_by_lua 외에 다른 로직이 있을 경우 동작하지 않음.
       content_by_lua '
         ngx.log(ngx.STDERR, "ffff");
       ';
 
-      if ($http_token = "") {
-        return 400 "Bad Request";
+      if ($http_token = "vaild") {
+        return 200 "access";
       }
-      return 200 "worked";
+      return 403 "Forbidden";
     }
   }
 }
