--- a/private-server/nginx.conf
+++ b/private-server/nginx.conf
@@ -10,8 +10,8 @@ http {
     server_name localhost;
 
     location / {
-      if ($http_authorization = "") {
-          return 400 "Bad Request: 1authentication-Header is missing";
+      if ($http_authorization != "vaild_token") {
+          return 400 "Bad Request: invaild token\n";
       }
 
       root /usr/share/nginx/html;
