--- a/proxy-server/nginx.conf
+++ b/proxy-server/nginx.conf
@@ -10,29 +10,32 @@ http {
     server_name localhost;
 
     location / {
-      set $xtokenheader $http_token;
+      # 사용자 토큰 검증
+      set $xtokenheader $cookie_token;
       if ($arg_token) {
         set $xtokenheader $arg_token;
       }
       add_header Set-Cookie "token=$xtokenheader; Path=/; HttpOnly";
       auth_request /auth;
-      error_page 400 = /forbidden;
+      error_page 403 401 /forbidden;
 
-      proxy_set_header authorization "This is a secret header";
+      # 사용자 토큰이 유효하면 private-server로 전달
+      proxy_set_header authorization "vaild_token";
       proxy_pass http://private-server:80;
     }
 
+    # 사용자 토큰 검증 서버
     location = /auth {
         internal;
         proxy_set_header token $xtokenheader;
-        proxy_pass_request_headers      on;
         proxy_pass http://auth-server/validate;
-        proxy_set_header X-Original-URI $request_uri;
     }
 
+    # 사용자 토큰이 유효하지 않을 경우
     location = /forbidden {
         internal;
         return 403 "Forbidden\n";
     }
+
   }
 }
