젠킨스 도커 에러 수정

--- a/jenkins/docker-compose.yaml
+++ b/jenkins/docker-compose.yaml
@@ -15,5 +15,4 @@ services:
       - "50000:50000"
     volumes:
       - ./jenkins_home:/var/jenkins_home
-      - /Users/mac/.docker/run/docker.sock:/var/run/docker.sock
-    # - /var/run/docker.sock:/var/run/docker.sock (docker context ls 를 통해 어떤 경로를 쓸지 확인한다.)
+      - /var/run/docker.sock:/var/run/docker.sock
