--- a/prometheus-stack/prometheus/yaml/prometheus.yml
+++ b/prometheus-stack/prometheus/yaml/prometheus.yml
@@ -8,6 +8,9 @@ scrape_configs:
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter:9100']
-
+  - job_name: 'shoehub'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['shoehub-exporter:8080']
 rule_files:
   - /etc/prometheus/alert.rules.yml
