--- a/prometheus-stack/docker-compose.yaml
+++ b/prometheus-stack/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--web.config.file=/etc/prometheus/web.yml'
+    user: '1000'
     restart: unless-stopped
 
   node-exporter:
@@ -42,6 +43,7 @@ services:
       - ./grafana/provisioning:/etc/grafana/provisioning
     ports:
       - 9000:3000
+    user: '1000'
     depends_on:
       - prometheus
 
