fix: Grafana 대시보드 구조 개선
- 폴더 기반 구성 및 프로비저닝 설정 추가

--- a/prometheus-stack/grafana/provisioning/dashboards/dashboard.yml
+++ b/prometheus-stack/grafana/provisioning/dashboards/dashboard.yml
@@ -10,3 +10,8 @@ providers:
     allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
+      foldersFromFilesStructure: true
+
+folders:
+  - name: 'MyFolder'
+    uid: 'my-folder'
