feat: Loki와 Promtail을 추가하여 로그 모니터링 시스템 구축
- docker-compose.yaml에 Loki, Promtail, Flog 서비스 추가
- Grafana 데이터소스에 Loki 추가
- Promtail 설정 파일 생성
- Flog 더미 로그 데이터용 디렉토리 추가

--- a/prometheus-stack/docker-compose.yaml
+++ b/prometheus-stack/docker-compose.yaml
@@ -53,3 +53,29 @@ services:
     container_name: test-server
     ports:
       - 8000:8080
+
+  # 로그 DATA 저장소
+  loki:
+    image: grafana/loki:2.9.2
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+
+  # 로그 DATA 수집기
+  promtail:
+    image: grafana/promtail:2.9.2
+    container_name: promtail
+    volumes:
+      - ./promtail/yaml/config.yml:/etc/promtail/config.yml
+      - /var/log:/var/log
+      - ./local_home/flog_data:/logs
+    command: -config.file=/etc/promtail/config.yml
+
+  # dummy 로그 출력용
+  flog:
+    image: mingrammer/flog
+    container_name: flog
+    command: -f json -o '/var/log/dump.log' -d 5s -l -t log -w
+    volumes:
+      - ./local_home/flog_data:/var/log
