--- a/prometheus-stack/grafana/provisioning/datasources/datasource.yml
+++ b/prometheus-stack/grafana/provisioning/datasources/datasource.yml
@@ -10,3 +10,13 @@ datasources:
     isDefault: true
     editable: true
     uid: '1111'
+
+  - name: Loki
+    type: loki
+    access: proxy
+    orgId: 1
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
+    version: 1
+    editable: false
