Add: kube-state-metrics 추가 및 Prometheus 구성 업데이트

--- a/prometheus-stack/helm/templates/prometheus/configmap.yaml
+++ b/prometheus-stack/helm/templates/prometheus/configmap.yaml
@@ -14,10 +14,16 @@ data:
       - job_name: 'node-exporter'
         kubernetes_sd_configs:
           - role: endpoints
+            namespaces:
+                names:
+                  - monitoring
         relabel_configs:
         - source_labels: [__meta_kubernetes_endpoints_name]
           regex: 'node-exporter'
           action: keep
+      - job_name: 'kube-state-metrics'
+        static_configs:
+          - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
     rule_files:
       - /etc/prometheus/alert.rules.yml
 
