--- a/prometheus-stack/charts/stable/index.yaml
+++ b/prometheus-stack/charts/stable/index.yaml
@@ -3,12 +3,12 @@ entries:
   prometheus-stack:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2024-10-22T18:17:16.076225+09:00"
+    created: "2024-10-23T07:17:12.6097453+09:00"
     description: this-is-prometheus-stack
-    digest: f8a4e76569f9a3c6362ba55483c6d8b6bde7172a435fa823713337b0320c094d
+    digest: aecb3ee3c26264d1ea2dd3b7a6b89d58ded52f1a6bf96c68ee79e8ebc9c1c0e7
     name: prometheus-stack
     type: application
     urls:
-    - prometheus-stack-0.1.3.tgz
-    version: 0.1.3
-generated: "2024-10-22T18:17:16.075706+09:00"
+    - prometheus-stack-0.1.4.tgz
+    version: 0.1.4
+generated: "2024-10-23T07:17:12.60935261+09:00"
