--- a/prometheus-stack/docker/docker-compose.yaml
+++ b/prometheus-stack/docker/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
 
   # https://github.com/Einsteinish/Docker-Compose-Prometheus-and-Grafana
   grafana:
+    image: sororiri/grafana:0.0.1
     build:
       context: ./grafana
     container_name: grafana
