--- a/prometheus-stack/helm/templates/grafana/ingress.yaml
+++ b/prometheus-stack/helm/templates/grafana/ingress.yaml
@@ -4,21 +4,21 @@ metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-issuer
     nginx.ingress.kubernetes.io/enable-cors: "true"
-  name: prometheus
+  name: grafana
 spec:
   ingressClassName: nginx
   rules:
-  - host: prometheus.entto.shop
+  - host: grafana.entto.shop
     http:
       paths:
       - backend:
           service:
-            name: prometheus
+            name: grafana
             port:
-              number: 9090
+              number: 3000
         path: /
         pathType: Prefix
   tls:
   - hosts:
-    - prometheus.entto.shop
-    secretName: prometheus.entto.shop-tls
+    - grafana.entto.shop
+    secretName: grafana.entto.shop-tls
