Fix: playbook 추가 (재부팅 시 자동 로그인)

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -4,4 +4,4 @@ target2 ansible_host=target2 ansible_user=root ansible_password=password ansible
 target3 ansible_host=target3 ansible_user=root ansible_password=password ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [all:vars]
-ansible_python_interpreter=/usr/bin/python3
+ansible_python_interpreter=/usr/bin/python3.11
