Add: 도커 설치 playbook 추가

--- a/ansible/infra-setup/inventory/node.ini
+++ b/ansible/infra-setup/inventory/node.ini
@@ -4,3 +4,4 @@ node2 ansible_host=m2 ansible_user=root
 node3 ansible_host=m3 ansible_user=root
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
+docker_user=sori
