--- a/ansible/docker-compose.yaml
+++ b/ansible/docker-compose.yaml
@@ -9,21 +9,24 @@ services:
     container_name: ansible
     volumes:
       - .:/ansible
+      - ~/.ssh:/root/.ssh
+      - /etc/hosts:/etc/hosts
+    network_mode: host
 
-  target1:
-    image: sororiri/ansible-target:0.0.1
-    build:
-      context: ssh-target
-    container_name: target1
+  # target1:
+  #   image: sororiri/ansible-target:0.0.1
+  #   build:
+  #     context: ssh-target
+  #   container_name: target1
 
-  target2:
-    image: sororiri/ansible-target:0.0.1
-    build:
-      context: ssh-target
-    container_name: target2
+  # target2:
+  #   image: sororiri/ansible-target:0.0.1
+  #   build:
+  #     context: ssh-target
+  #   container_name: target2
 
-  target3:
-    image: sororiri/ansible-target:0.0.1
-    build:
-      context: ssh-target
-    container_name: target3
+  # target3:
+  #   image: sororiri/ansible-target:0.0.1
+  #   build:
+  #     context: ssh-target
+  #   container_name: target3
