Add: nfs 셋업 playbook 수정
- task 추가 : etc/hosts 설정작업
- 공유 폴더 권한 수정: 755 -> 777

--- a/ansible/infra-setup/inventory/node.ini
+++ b/ansible/infra-setup/inventory/node.ini
@@ -1,7 +1,7 @@
 [targets]
-node1 ansible_host=m1 ansible_user=root
-node2 ansible_host=m2 ansible_user=root
-node3 ansible_host=m3 ansible_user=root
+node1 ansible_host=m1 ansible_user=root node_name=m1
+node2 ansible_host=m2 ansible_user=root node_name=m2
+node3 ansible_host=m3 ansible_user=root node_name=m3
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
 docker_user=sori
