--- a/prometheus-stack/helm/templates/prometheus/configmap.yaml
+++ b/prometheus-stack/helm/templates/prometheus/configmap.yaml
@@ -10,7 +10,7 @@ data:
     scrape_configs:
       - job_name: 'prometheus'
         static_configs:
-          - targets: ['localhost:9090']
+          - targets: ['localhost:{{ .Values.prometheus.port }}']
       - job_name: 'node-exporter'
         kubernetes_sd_configs:
           - role: endpoints
