--- a/ansible/kubespray/docker-compose.yml
+++ b/ansible/kubespray/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ./inventory/mycluster:/kubespray/inventory/mycluster
+      - ./inventory:/kubespray/inventory/mycluster
       - ~/.ssh:/root/.ssh
     working_dir: /kubespray
     command: bash
