--- a/ansible/kubespray/inventory/group_vars/k8s_cluster/addons.yml
+++ b/ansible/kubespray/inventory/group_vars/k8s_cluster/addons.yml
@@ -1,7 +1,7 @@
 ---
 # Kubernetes dashboard
 # RBAC required. see docs/getting-started.md for access details.
-dashboard_enabled: false
+dashboard_enabled: true
 
 # Helm deployment
 helm_enabled: false
@@ -69,13 +69,13 @@ gateway_api_enabled: true
 
 # Nginx ingress controller deployment
 ingress_nginx_enabled: true
-# ingress_nginx_host_network: false
-# ingress_nginx_service_type: LoadBalancer
+ingress_nginx_host_network: true
+#   iu uingress_nginx_service_type: LoadBalancer
 # ingress_nginx_service_annotations:
 #   example.io/loadbalancerIPs: 1.2.3.4
 # ingress_nginx_service_nodeport_http: 30080
 # ingress_nginx_service_nodeport_https: 30081
-ingress_publish_status_address: ""
+# ingress_publish_status_address: ""
 # ingress_nginx_nodeselector:
 #   kubernetes.io/os: "linux"
 # ingress_nginx_tolerations:
