--- a/ansible/kubespray/inventory/inventory.ini
+++ b/ansible/kubespray/inventory/inventory.ini
@@ -6,8 +6,11 @@
 # Configure 'ip' variable to bind kubernetes services on a different ip than the default iface
 # We should set etcd_member_name for etcd cluster. The node that are not etcd members do not need to set the value,
 # or can set the empty string value.
-[kube_control_plane]
+[all]
 node1 ansible_host=100.75.193.68 ip=100.75.193.68 etcd_member_name=etcd1
+
+[kube_control_plane]
+node1
 # node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
 # node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
 
@@ -15,6 +18,7 @@ node1 ansible_host=100.75.193.68 ip=100.75.193.68 etcd_member_name=etcd1
 kube_control_plane
 
 [kube_node]
+node1
 # node4 ansible_host=95.54.0.15  # ip=10.3.0.4
 # node5 ansible_host=95.54.0.16  # ip=10.3.0.5
 # node6 ansible_host=95.54.0.17  # ip=10.3.0.6
