kubespray: 설정 변경

--- a/ansible/kubespray/inventory/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/ansible/kubespray/inventory/group_vars/k8s_cluster/k8s-cluster.yml
@@ -370,3 +370,8 @@ kubeadm_patches: []
 
 # Set to true to remove the role binding to anonymous users created by kubeadm
 remove_anonymous_access: false
+
+
+# 인증서 기간 기본 1년 => 10년
+kube_cert_validity_period: 87600h
+
