--- a/ansible/kubespray/inventory/group_vars/k8s_cluster/kube_control_plane.yml
+++ b/ansible/kubespray/inventory/group_vars/k8s_cluster/kube_control_plane.yml
@@ -9,3 +9,8 @@
 # system_cpu_reserved: 250m
 # system_ephemeral_storage_reserved: 2Gi
 # system_pid_reserved: "1000"
+
+
+
+# bash Kubectl alias
+kubectl_alias: k
